# monetae

./: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  \  build.sh  canister_ids.json  dfx.json  list-tests.sh  package-lock.json  package.json  test.txt  tsconfig.json
.github/workflows/: cd.yml  checks.yml  ci.yml  tests.yml
.github/workflows/tools/: build.sh  crate-type.sh  list-tests.sh  setup-env.sh
src/: README.md
src/contract/: Cargo.toml  contract.did
src/contract/src/: allowances.rs  ledger.rs  lib.rs  transactions.rs  types.rs
src/contract/tests/: common.rs  lib_test.rs
src/declarations/contract/: contract.did.d.ts  contract.did.js  index.js
src/erc20/: Cargo.toml  erc20.did  lib.rs  types.rs
src/frontend/: README.md  config-overrides.js  package-lock.json  package.json  webpack.config.js
src/frontend/public/: index.html  manifest.json
src/frontend/src/: App.tsx  fonts.tsx  index.tsx  theme.tsx
src/frontend/src/components/: Container.tsx  NavigationBar.tsx  PageLoader.tsx
src/frontend/src/components/information/: carousel.css  index.tsx
src/frontend/src/hooks/: authentication.ts  metadata.ts  wallets.ts
src/frontend/src/pages/: _app.tsx  index.tsx
src/monetae/: Cargo.toml  allowances.rs  ledger.rs  lib.rs  monetae.did  transactions.rs  types.rs
src/monetae-frontend/: tsconfig.json
src/monetae-frontend/src/pages/: index.tsx
src/monetae/src/: allowances.rs  ledger.rs  lib.rs  transactions.rs  types.rs
src/monetae/tests/: common.rs  lib_test.rs  tests.txt  transactions_test.rs
(+8 files in other folders)
