[package]
name = "monetae"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-kit = "0.4.3"
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
serde = "1.0.135"
candid = "0.7.10"
